--- a/web-app/css/application.css
+++ b/web-app/css/application.css
@@ -5904,19 +5904,30 @@ table .info a,
 /*  text-shadow: 1px 1px 1px #222;*/
 }
 .chat-box {
-  max-height: 200px;
+  height: 450px;
   overflow-y:scroll;
 }
 .chat-user-name {
+	font-weight: bold;
+  font-size: 12px;
   color: #870065;
   text-align: right;
-  padding-right:1px;
+  margin-right:15px;
+  padding-left:1px;
 }
 .chat-text{
+  font-size: 12px;
   text-align: left;
   padding-left: 1px;
 }
 .chat-stamp {
+  font-size: 12px;
   color: #870065;
   text-align: right;
+}
+.message-bar {
+  position: absolute;
+  bottom:30;
+  padding-left: 30px;
+  right:10;
 }
