--- a/web-app/css/application.css
+++ b/web-app/css/application.css
@@ -5904,8 +5904,9 @@ table .info a,
 /*  text-shadow: 1px 1px 1px #222;*/
 }
 .chat-box {
-  height: 400px;
+  height: 345px;
   margin-bottom: 10px;
+  margin-top: 55px;
   overflow-y:scroll;
 }
 .chat-user-name {
