--- a/web-app/css/application.css
+++ b/web-app/css/application.css
@@ -5904,13 +5904,10 @@ table .info a,
 /*  text-shadow: 1px 1px 1px #222;*/
 }
 .chat-box {
-  height: 345px;
-  margin-bottom: 10px;
-  margin-top: 55px;
+  height: 450px;
   overflow-y:scroll;
 }
 .chat-user-name {
-	font-weight: bold;
   font-size: 12px;
   color: #870065;
   text-align: right;
@@ -5929,7 +5926,18 @@ table .info a,
 }
 .message-bar {
   position: absolute;
-  top:385;
-  left: 0;
+  bottom:30;
+  padding-left: 30px;
   right:10;
+}
+.homepage-logo
+{
+margin-left:auto;
+margin-right:auto;
+margin-top: 100px;
+}
+.homepage-center {
+margin-left:auto;
+margin-right:auto;
+text-align: center;
 }
